# KenkoTerminal

./: .gitignore  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: bundle.yml  ci.yml
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: batch.rs  config.rs  connections.rs  daemon.rs  lib.rs  main.rs  monitor.rs  pty.rs  serial.rs  sftp.rs  ssh.rs  ssh_config.rs  sync.rs  telnet.rs  tunnel.rs
src-tauri/tests/: batch_smoke.rs  sftp_smoke.rs  ssh_smoke.rs  tunnel_smoke.rs
src/components/: Batch.tsx  FileManager.tsx  Monitor.tsx  SavedConnections.tsx  Serial.tsx  SerialDebugger.tsx  SyncPanel.tsx  Terminal.tsx  Tunnels.tsx
src/lib/: batch.ts  connections.ts  monitor.ts  pty.ts  serialDebug.ts  session.ts  sftp.ts  sync.ts  tunnel.ts
